<resources>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_name" translatable="false">EasyHome</string>
    <string name="title_activity_proprietario" translatable="false">ProprietarioActivity</string>
    <string name="action_settings">Settings</string>
    <string name="titolo">Message Title</string>
    <string name="messaggio">Message</string>
    <string name="versione">Version:</string>
    <string name="version">Info Version</string>
    <string name="lingua">Language:</string>
    <string name="bill">Bill</string>
    <string name="back">Back</string>
    <string name="home_add">Home add</string>
    <string name="contact">Info Contact</string>
    <string name="house_list">House List:</string>
    <string name="sospeso">Not Paid</string>
    <string name="storico">History</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_bollette">Bills</string>
    <string name="info">Info App</string>
    <string name="logout">Log Out</string>
    <string name="impostazioni">Settings</string>
    <string name="title_activity_inquilino" translatable="false">InquilinoActivity</string>
    <string name="pop_up_logout_title">Confirmation Log Out</string>
    <string name="pop_up_logout_text">, are you sure that you want to logout?</string>
    <string name="pop_up_logout_yes">Yes</string>
    <string name="pop_out_logout_no" translatable="false">No</string>
    <string name="register">REGISTER</string>
    <string name="selectData">Data:</string>
    <string name="forgot_password">FORGOT PASSWORD ?</string>
    <string name="cleaning">Cleaning</string>
    <string name="annunci">Notices</string>
    <string name="import_bollette">Import:</string>
    <string name="expiration_bollette">Expriration:</string>
    <string name="pay">Paid:</string>
    <string name="casa">House name</string>
    <string name="description_bollette">Description:</string>
    <string name="day">Day:</string>
    <string name="send_message">Send Message</string>
    <string name="tot">Total:</string>
    <string name="cancel">Reset</string>
    <string name="send">Add</string>
    <string name="message_sent">Message sent</string>
    <string name="new_message_from">New Message from:</string>
    <string name="add_inq">Add Inq</string>
    <string name="add_bill">Add Bill</string>
    <string name="share">Share</string>
    <string name="id">Home code</string>
    <string name="ok" translatable="false">OK</string>
    <string name="insert_import">Insert bill import.</string>
    <string name="atHome">Who\'s in the house:</string>
    <string name="popup_pagamentoBolletta">Bill payment</string>
    <string name="popup_pagamentoBolletta_corpo">Are you sure you\'re paying this bill?</string>
    <string name="popup_deleteBolletta">Bill delete</string>
    <string name="popup_deleteBolletta_corpo">Are you sure you\'re deleting this bill?</string>
    <string name="snack_message">If you want delete a bill, press on it for a long time.</string>
    <string name="no" translatable="false">No</string>
    <string name="avviso" >Alert</string>
    <string name="si">Yes</string>
    <string name="messageDayCopy">Is there already a cleaning shift on this day you want to change it?</string>
    <string name="turn1_error" >Select a turn 1</string>
    <string name="turn2_error">Select a different turn 2</string>
    <string name="titleInHome">Enter a house</string>
    <string name="insert_homename">Insert house name.</string>
    <string name="data">Date</string>
    <string name="house_card"> House\'s Card</string>
    <string name="turn_1" translatable="false">Turn 1:</string>
    <string name="turn_2" translatable="false">Turn 2:</string>
    <string name="new_turn">New Turn add</string>
    <string name="turn_clean">Cleaning turns:</string>
    <string name="notification_new_bill_body">€  Expiration:</string>
    <string name="notification_new_bill_title">New bill inserted</string>
    <string name="type_bolletta">Type:</string>
    <string name="new_bill">New Bill</string>
    <string name="nuovo_turno_pulizie">New Cleaning Turn</string>
    <string name="insert_date">Insert expiration date.</string>
    <string name="sign_in">"U Signed In successfully "</string>
    <string name="add_home">"Home's add"</string>
    <string name="new_house">New House</string>
    <string-array name="tipo">
        <item>Gas</item>
        <item>Energy</item>
        <item>Water</item>
        <item>Other</item>
    </string-array>
    <string-array name="pay">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="giorni">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>
