<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="it.uniba.di.easyhome.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="it.uniba.di.easyhome.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/inq_nav_bollette"
        android:name="it.uniba.di.easyhome.ui.bills.BillsFragment"
        android:label="@string/menu_bollette"
        tools:layout="@layout/inq_fragment_bills" />

    <fragment
        android:id="@+id/inq_nav_tools"
        android:name="it.uniba.di.easyhome.ui.tools.ToolsFragment"
        android:label="@string/impostazioni"
        tools:layout="@layout/pr_fragment_tools" />

    <fragment
        android:id="@+id/inq_nav_logout"
        android:name="it.uniba.di.easyhome.ui.logout.Logout"
        android:label="@string/logout"
        tools:layout="@layout/inq_logout" />

    <fragment
        android:id="@+id/inq_nav_info"
        android:name="it.uniba.di.easyhome.pr_ui.info.InfoFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_info" />
</navigation>