<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="it.uniba.di.easyhome.pr_ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/pr_fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="it.uniba.di.easyhome.pr_ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/pr_fragment_gallery" />

    <fragment
        android:id="@+id/pr_nav_bills"
        android:name="it.uniba.di.easyhome.pr_ui.bollette.BolletteFragment"
        android:label="@string/menu_bollette"
        tools:layout="@layout/pr_fragment_bollette" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="it.uniba.di.easyhome.pr_ui.tools.ToolsFragment"
        android:label="@string/impostazioni"
        tools:layout="@layout/pr_fragment_tools" />

    <fragment
        android:id="@+id/pr_nav_logout"
        android:name="it.uniba.di.easyhome.pr_ui.logout.Logout"
        android:label="@string/logout"
        tools:layout="@layout/pr_logout" />

    <fragment
        android:id="@+id/nav_send"
        android:name="it.uniba.di.easyhome.pr_ui.info.InfoFragment"
        android:label="@string/info"
        tools:layout="@layout/pr_fragment_info" />
</navigation>