<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".Fragments.Bollette.AddBolletteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:text="@string/nuovo_turno_pulizie"
            android:gravity="center"
            android:textSize="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="25dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@android:color/transparent">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    >
                    <TextView
                        android:id="@+id/day"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/day"
                        android:gravity="center"/>

                    <Spinner
                        android:id="@+id/spinnerDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorAccent"
                        android:theme="@style/spinnerTheme"/>
                </LinearLayout>

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginTop="25dp"
                android:background="@android:color/transparent">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/inqName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/turn_1"
                        android:gravity="center"/>

                    <Spinner
                        android:id="@+id/spinnerInq"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorAccent"
                        android:theme="@style/spinnerTheme"
                        />
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginTop="25dp" >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/inqName_2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/turn_2"
                        android:gravity="center"/>
                    <Spinner
                        android:id="@+id/spinnerInq_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorAccent"
                        android:theme="@style/spinnerTheme"
                        />
                </LinearLayout>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/descView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description_bollette" />

                    <EditText
                        android:id="@+id/desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:backgroundTint="@android:color/transparent"
                        android:background="?attr/cardbackground"
                        android:ems="10"
                        android:gravity="start|top"
                        android:layout_marginLeft="15dp"
                        android:inputType="textMultiLine" />
                </LinearLayout>

            </RelativeLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="vertical"
                android:padding="10dp">

                <Button
                    android:id="@+id/SendPuli"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/yellow_fill__rounded_color"
                    android:text="@string/send"
                    android:layout_marginStart="250dp"
                    android:textColor="@color/white" />
            </RelativeLayout>
    </LinearLayout>
</ScrollView>