<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundcolor"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/MMINF"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/mminf" />


        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/VersTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@drawable/sfondo_view"
        android:text="@string/version"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="351dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="28dp">

            <TextView
                android:id="@+id/conTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="-2dp"
                android:layout_marginBottom="157dp"
                android:background="@drawable/sfondo_view"
                android:text="@string/contact"
                android:textAlignment="center"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:text="@string/versione"
                android:textColor="?attr/textcolor"
                />

            <TextView
                android:id="@+id/num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/ver"
                android:text="  xxxxx.1"
                android:textColor="?attr/textcolor"
                />

            <TextView
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/conTitle"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="118dp"
                android:background="@null"
                android:text="xxxxx@yyyy.it"
                android:textAlignment="center"
                android:textColor="?attr/textcolor"
                />

            <TextView
                android:id="@+id/adress"
                android:layout_width="296dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="57dp"
                android:layout_marginEnd="58dp"
                android:layout_marginBottom="28dp"
                android:background="@null"
                android:ems="10"
                android:text="via Peppino Di Capri, 85, Milano, MI"
                android:textAlignment="center"
                android:textColor="?attr/textcolor"
                />


        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="105dp"
            android:layout_marginEnd="243dp"
            android:src="@drawable/fb" />

        <ImageView
            android:layout_width="26.7dp"
            android:layout_height="26.7dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="161dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="224dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/instagram" />

        <ImageView
            android:layout_width="26.7dp"
            android:layout_height="26.7dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="187dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/twitter" />

        <ImageView
            android:layout_width="26.7dp"
            android:layout_height="26.7dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="236dp"
            android:layout_marginEnd="149dp"
            android:src="@drawable/linkedin" />

    </RelativeLayout>

</LinearLayout>